feat: expose private project API
